# pyaedt-mcp

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS  CHANGELOG.md  CNAME  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml  robots.txt  versions.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  requirements.txt  start.sh  welcome.rst
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: ci-release.yml  ci.yml  label.yml
doc/: Makefile  make.bat
doc/changelog.d/: 30.maintenance.md  31.maintenance.md  33.maintenance.md  34.maintenance.md  35.fixed.md  38.dependencies.md  40.dependencies.md  41.documentation.md  42.documentation.md  43.documentation.md  48.dependencies.md  50.dependencies.md  51.fixed.md  53.fixed.md  55.dependencies.md  57.fixed.md  60.documentation.md  62.dependencies.md  63.maintenance.md
doc/source/: changelog.rst  conf.py  contribution.rst  index.rst  links.rst
doc/source/api/: index.rst
doc/source/examples/: adding_new_tool.rst  hfss_patch_antenna_workflow.rst  index.rst  video_demos.rst
doc/source/getting_started/: contribution.rst  ide_configuration.rst  index.rst  installation.rst
doc/source/user_guide/: best_practices.rst  docker.rst  index.rst  overview.rst  tools_and_capabilities.rst  workflows.rst
doc/styles/: typos.toml
doc/styles/config/vocabularies/ANSYS/: accept.txt
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
examples/: hfss_patch_antenna_workflow.md
src/ansys/aedt/mcp/: __init__.py  __main__.py  contexts.py  helpers.py  prompts.py  server.py  tools.py  toolsets.py
src/ansys/aedt/mcp/aedt_helper/: __init__.py  startup_code.py
tests/: conftest.py  test_basic.py  test_cli.py  test_contexts.py  test_docker.py  test_error_handling.py  test_helpers.py  test_helpers_additional.py  test_integration.py  test_lifespan.py  test_live_tools.py  test_prompts.py  test_tools.py  test_toolsets.py
tests/integration/: conftest.py  test_integration.py
version/: index.html
version/0.1/: changelog.html  genindex.html  index.html  objects.inv  py-modindex.html
version/0.1/_sources/: changelog.rst.txt
version/0.1/_sources/api/ansys/aedt/mcp/__main__/: index.rst.txt
version/0.1/_sources/api/ansys/aedt/mcp/helpers/: index.rst.txt
version/0.1/_sources/api/ansys/aedt/mcp/server/: PyAEDTMCP.rst.txt  SessionContext.rst.txt  index.rst.txt
version/0.1/_sources/api/ansys/aedt/mcp/tools/: index.rst.txt
version/0.1/_sources/api/ansys/aedt/mcp/toolsets/: index.rst.txt
version/0.1/_static/: search.json
version/0.1/api/ansys/aedt/mcp/: index.html
version/0.1/api/ansys/aedt/mcp/aedt_helper/startup_code/: index.html
version/0.1/api/ansys/aedt/mcp/contexts/: index.html
version/0.1/api/ansys/aedt/mcp/helpers/: index.html
version/0.1/api/ansys/aedt/mcp/server/: SessionContext.html
version/0.1/api/ansys/aedt/mcp/toolsets/: index.html
version/0.1/examples/: adding_new_tool.html  index.html  video_demos.html
version/0.1/user_guide/: best_practices.html  docker.html  workflows.html
version/dev/: changelog.html  contribution.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
version/dev/_sources/api/: index.rst.txt
version/dev/_sources/api/ansys/aedt/mcp/: index.rst.txt
version/dev/_sources/api/ansys/aedt/mcp/aedt_helper/: index.rst.txt
version/dev/_sources/getting_started/: installation.rst.txt
version/dev/_sources/user_guide/: best_practices.rst.txt
version/dev/_static/: search.json
version/dev/api/: index.html
version/dev/api/ansys/aedt/mcp/: index.html
version/dev/api/ansys/aedt/mcp/__main__/: index.html
version/dev/api/ansys/aedt/mcp/aedt_helper/: index.html
version/dev/api/ansys/aedt/mcp/aedt_helper/startup_code/: index.html
version/dev/api/ansys/aedt/mcp/contexts/: index.html
version/dev/api/ansys/aedt/mcp/helpers/: index.html
version/dev/api/ansys/aedt/mcp/prompts/: index.html
version/dev/api/ansys/aedt/mcp/server/: PyAEDTAppContext.html  PyAEDTMCP.html  SessionContext.html  index.html
version/dev/api/ansys/aedt/mcp/tools/: index.html
version/dev/api/ansys/aedt/mcp/toolsets/: index.html
version/dev/examples/: adding_new_tool.html  hfss_patch_antenna_workflow.html  index.html  video_demos.html
version/dev/getting_started/: ide_configuration.html  index.html  installation.html
version/dev/user_guide/: best_practices.html  docker.html  index.html  overview.html  tools_and_capabilities.html  workflows.html
version/stable/: contribution.html  index.html  search.html  searchindex.js
version/stable/_sources/api/ansys/aedt/mcp/aedt_helper/startup_code/: index.rst.txt
version/stable/_sources/api/ansys/aedt/mcp/contexts/: index.rst.txt
version/stable/_sources/api/ansys/aedt/mcp/prompts/: index.rst.txt
version/stable/_sources/api/ansys/aedt/mcp/server/: PyAEDTAppContext.rst.txt
version/stable/api/: index.html
version/stable/api/ansys/aedt/mcp/__main__/: index.html
version/stable/api/ansys/aedt/mcp/aedt_helper/: index.html
version/stable/api/ansys/aedt/mcp/prompts/: index.html
version/stable/api/ansys/aedt/mcp/server/: PyAEDTAppContext.html  PyAEDTMCP.html  index.html
version/stable/api/ansys/aedt/mcp/tools/: index.html
version/stable/examples/: hfss_patch_antenna_workflow.html
version/stable/getting_started/: ide_configuration.html  index.html  installation.html
version/stable/user_guide/: index.html  overview.html  tools_and_capabilities.html
