[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "ansys-aedt-mcp"
version = "0.1.dev0"
description = "Model Context Protocol (MCP) server for Ansys Electronics Desktop (AEDT) through PyAEDT"
readme = "README.md"
requires-python = ">=3.11,<4"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Synopsys, Inc. and ANSYS, Inc.", email = "pyansys-core@synopsys.com"}]
maintainers = [{name = "Synopsys, Inc. and ANSYS, Inc.", email = "pyansys-core@synopsys.com"}]
keywords = [
  "ansys",
  "aedt",
  "pyaedt",
  "electronics-desktop",
  "hfss",
  "maxwell",
  "icepak",
  "circuit",
  "mcp",
  "model-context-protocol",
  "ai",
  "assistant",
  "electromagnetic-simulation",
  "rf-simulation",
  "thermal-analysis",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (Electromagnetics)",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
  "pyaedt[all]>=0.10.0",
  "ansys-common-mcp>=0.3.0",
  "matplotlib>=3.5.0",
]

[project.optional-dependencies]
tests = [
  "ansys-common-mcp==0.3.2",
  "matplotlib==3.11.0",
  "pyaedt==1.1.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "pytest-mock==3.15.1",
]
doc = [
  "ansys-sphinx-theme[autoapi,changelog]==1.8.2",
  "numpydoc==1.10.0",
  "sphinx-autodoc-typehints==3.1.0",
  "sphinx-design==0.7.0",
  "sphinx-notfound-page==1.1.0",
  "sphinxcontrib-video==0.4.2",
]

[project.urls]
Documentation = "https://aedt-mcp.docs.pyansys.com"
Homepage = "https://github.com/ansys/pyaedt-mcp"
Issues = "https://github.com/ansys/pyaedt-mcp/issues"
Repository = "https://github.com/ansys/pyaedt-mcp"

[project.scripts]
ansys-aedt-mcp = "ansys.aedt.mcp.__main__:launcher"

[tool.flit.module]
name = "ansys.aedt.mcp"

[tool.ruff]
fix = true
format.indent-style = "space"
format.quote-style = "double"
line-length = 100
lint.isort.combine-as-imports = true
lint.isort.force-sort-within-sections = true
lint.isort.known-first-party = ["ansys.aedt.mcp"]
lint.per-file-ignores."!src/**.py" = ["D"]
lint.per-file-ignores."__init__.py" = ["F401"]
lint.per-file-ignores."tests/**.py" = ["D", "E501", "N806"]
lint.pydocstyle.convention = "numpy"
lint.select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "PTH", # flake8-use-pathlib
  "TD", # flake8-todos
]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = [
  "^\\.venv/",
  "^venv/",
  "^build/",
  "^dist/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ansys.aedt.mcp --cov-report=term-missing --cov-report=html --cov-report=xml --tb=short -q"
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "integration: marks tests as integration tests (require running AEDT instance)",
  "unit: marks tests as unit tests (do not require running AEDT instance)",
  "slow: Tests that take a long time to run",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[tool.towncrier]
package = "ansys.aedt.mcp"
directory = "doc/changelog.d"
filename = "doc/source/changelog.rst"
start_string = ".. towncrier release notes start\n"
template = "doc/changelog.d/changelog_template.jinja"
title_format = "`{version} <https://github.com/ansys/pyaedt-mcp/releases/tag/v{version}>`_ - {project_date}"
issue_format = "`#{issue} <https://github.com/ansys/pyaedt-mcp/pull/{issue}>`_"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
